--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "check_nexus"  # dls_check_nexus? i16_check_nexus? dls_mmg_check_nexus?
 dynamic = ['version']
 dependencies = [
   "h5py>=3.11.0",
-  "punx"
+  "punx",
+  "nexus2srs"
 ]
 requires-python = ">=3.10"
 authors = [
